--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ default = ["std"]
 std = []
 simd = ["std"]
 parallel = ["std", "rayon", "crossbeam-utils"]
+gpu = ["std"]
 serde = ["dep:serde", "smallvec/serde"]
 full = ["simd", "parallel", "serde"]
 
